welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:21: error: too many arguments for method faireV: ()Unit
faireV(4)
      ^